test/src/e2e_vm_tests/test_programs/should_pass/stdlib/assert_ne_revert/src/main.sw
script;

fn main() {
    assert_ne(1, 1);
}