test/src/e2e_vm_tests/test_programs/should_fail/dbg_wrong_args_count/src/main.sw
script;

fn main() {
    let _ = __dbg();
    let _ = __dbg(1, 2);
}
